[gd_scene load_steps=9 format=3 uid="uid://cj26m1ltri7sf"]

[ext_resource type="Script" uid="uid://bl25ombvodojc" path="res://main_menu.gd" id="1_gtid3"]
[ext_resource type="Texture2D" uid="uid://mddu2d1somlh" path="res://Assets/Frame 979.png" id="1_wugcc"]
[ext_resource type="FontFile" uid="uid://c8gwtcljmhxo8" path="res://Assets/Fonts/Backso.ttf" id="2_gtid3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wtjmy"]
texture = ExtResource("1_wugcc")
modulate_color = Color(0.408329, 0.408329, 0.408329, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wugcc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnfjo"]
bg_color = Color(0.838897, 0.838897, 0.838897, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wugcc"]
bg_color = Color(0.65013, 0.650128, 0.650128, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtjmy"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 3.0
offset_right = 9.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gtid3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -582.0
offset_top = -333.0
offset_right = -582.0
offset_bottom = -333.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wtjmy")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-10, -6)
limit_left = -9999997
limit_right = 10000003

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -795.0
offset_top = -445.0
offset_right = -366.0
offset_bottom = -225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_wugcc")
theme_override_styles/hover = SubResource("StyleBoxFlat_dnfjo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wugcc")
theme_override_styles/normal = SubResource("StyleBoxFlat_wtjmy")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_wugcc")
theme_override_styles/hover = SubResource("StyleBoxFlat_dnfjo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wugcc")
theme_override_styles/normal = SubResource("StyleBoxFlat_wtjmy")
text = "Option"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_wugcc")
theme_override_styles/hover = SubResource("StyleBoxFlat_dnfjo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wugcc")
theme_override_styles/normal = SubResource("StyleBoxFlat_wtjmy")
text = "Exit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -698.0
offset_top = -607.0
offset_right = -477.0
offset_bottom = -497.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 20
theme_override_fonts/font = ExtResource("2_gtid3")
theme_override_font_sizes/font_size = 80
text = "LexIQ"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
